--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <!--<script src="main.js" defer></script>-->
 </head>
 <body>
+  
     <div class="heading" style="background: grey;">
         <h1> Image Drag Game </h1><hr>
     </div>
@@ -20,7 +21,7 @@
         <ol> The Images and their Names are given.</ol><br>
         <ol> You have to drag the images and drop them into the correct name box.</ol><br>
         <ol> It will be fun game.</ol><br>
-        <a href="main.html" type="button" class="primarybtn" style="background: black; font-size: 20px;"> Let's Start </a>
+        <a href="main.html" type="button" class="primarybtn" style="background: black; font-size: 20px;" onclick="alert('USE DESKSTOP VIEW FOR MOBILE')"> Let's Start </a>
     </div>
 
 </body>
