--- a/main.html
+++ b/main.html
@@ -40,7 +40,7 @@
 
   <div class="options">
     <a href="main.html" type="button" class="playagain">Play Again </a>
-    <a href="https://englishbolega.com/games" type="button" class="playmore"> Play More </a>
+    <a href="www.englishbolega.com/games" type="button" class="playmore"> Play More </a>
   </div>
 </body>
 </html>
